# my-ai-agent

./: .gitignore  README.md  SECURITY.md  pyproject.toml
.jules/: bolt.md  palette.md  sentinel.md
src/my_ai_agent/: __init__.py  __main__.py  agent.py  cli.py  config.py  memory.py  providers.py  tools.py
tests/: test_agent.py  test_calculator_dos.py  test_cli.py  test_memory.py  test_palette_ux.py  test_security.py  test_tools_security.py  test_ux.py  test_workspace_reader_ux.py
