[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "my-ai-agent"
version = "0.1.0"
description = "Production-minded command-line AI agent with pluggable providers and safe tools."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [{ name = "my-ai-agent contributors" }]
keywords = ["ai", "agent", "cli", "openai"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
]

dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
]

[project.scripts]
my-ai-agent = "my_ai_agent.cli:main"

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
